e2e/tests/all/snapshots/textarea_rest_desktop.snap
---
source: e2e/src/suite.rs
description: textarea at desktop (rest)
expression: tree
---
LabelText
  StaticText "Note"
textbox "Note"
status [atomic] [live=polite]
LabelText
  StaticText "Remark"
textbox "Remark"
status [atomic] [live=polite]
LabelText
  StaticText "Code"
textbox "Code"
paragraph
