e2e/tests/all/snapshots/textarea_rest_mobile.snap
---
source: e2e/src/suite.rs
description: textarea at mobile (rest)
expression: tree
---
LabelText
  StaticText "Note"
textbox "Note"
  description "20 characters left"
status [atomic] [live=polite]
LabelText
  StaticText "Remark"
textbox "Remark"
  description "20 characters left"
status [atomic] [live=polite]
LabelText
  StaticText "Code"
textbox "Code"
paragraph
