e2e/tests/all/snapshots/theme_switcher_rest_desktop.snap
---
source: e2e/src/suite.rs
description: theme_switcher at desktop (rest)
expression: tree
---
button "Switch to the dark theme"
paragraph
  StaticText "Page text"
