e2e/tests/all/snapshots/theme_switcher_rest_desktop_dark.snap
---
source: e2e/src/suite.rs
description: "theme_switcher at desktop (rest, dark)"
expression: tree
---
button "Switch to the light theme"
paragraph
  StaticText "Page text"
