e2e/tests/all/snapshots/theme_switcher_rest_mobile_dark.snap
---
source: e2e/src/suite.rs
description: "theme_switcher at mobile (rest, dark)"
expression: tree
---
button "Switch to the light theme"
paragraph
  StaticText "Page text"
